source/stylesheets/site.css.scss
/* ... */
.container {
  max-width: 940px;
  padding: 0 1rem;
  margin: 0 auto;
  box-sizing: border-box;
  position: relative;

  &--wide {
    max-width: 1500px;
  }
}

.hero {
  background: $c-highlight;
  background-image: linear-gradient(#f74141, #e53e3e);
  color: #fff;
  box-shadow: 0 4px 50px 0 rgba(#f00, .25);
  border-bottom: 1px solid #a00;

  .container {
    padding: 5rem 1rem 6rem 1rem;
  }
  &__headline {
  }
  .logo {
    display: block;
    width: 6rem;
    height: auto;
    margin-bottom: 2rem;
  }
  @include mobile {
    .container {
      padding: 5rem 1rem 2rem 1rem;
    }
    .logo {
      margin-left: 0;
    }
  }
}

.form {
  padding: 2rem 0 6rem 0;
}

.input-wrap {
  margin: 2.5rem 0;

  .label {
    display: block;
    font-size: .8rem;
    color: #666;
    font-weight: bold;
    margin-bottom: .5rem;
    letter-spacing: .02rem;
  }
  .subtext {
    display: block;
    font-size: .7rem;
    color: #999;
    // font-style: oblique;
    line-height: 1.4;
    font-weight: normal;
    margin-bottom: .75rem;
    margin-top: -.25rem;
    letter-spacing: .02rem;

    &--rb-inset {
      margin-left: 1.5em;
      margin-top: .15rem;
    }

    &--inset {
      margin-top: 5px;
    }
  }
  &--child {
    padding-left: 1rem;
    margin-top: -1rem;
    border-left: 4px solid #eee;
  }
  &--text {

    .input {
      --webkit-appearance: none;
      border: 1px solid #aaa;
      display: block;
      width: 100%;
      font-size: 1rem;
      font-family: $f-main;
      border-radius: 3px;
      padding: .5rem;
      box-sizing: border-box;

      &:focus {
        outline: none;
        border-color: #000;
        background: #fafafa;
      }
      &--short {
        max-width: 12rem;
      }
    }
  }
  &--radio {
    .radio-wrap {
      display: flex;
      flex-wrap: wrap;
    }
    .radio-item {
      display: flex;
      align-items: center;
      margin-right: 1.5rem;
      margin-top: .25rem;

      @include mobile {
        line-height: 1.7;
        margin-top: .25rem;
      }
    }
    .input {
      margin-right: .5rem;
    }
    span {
      // font-size: .8rem;
    }
  }

  &--checkboxlist {
    .checkboxlist-item {
      display: block;
      margin-bottom: 0.5em;

      margin-left: 26px;
      input {
        margin-left: -26px;
        font-size: 24px;
      }
    }
  }

  &__info {
    display: block;
    font-size: .7rem;
    line-height: 1.1rem;
    max-width: 500px;
    margin-top: .5rem;
    color: #888;
    padding-left: 1.5rem;
    position: relative;

    &::before {
      content: "i";
      position: absolute;
      top: .05rem;
      left: 0;
      display: block;
      width: 1rem;
      height: 1rem;
      background-color: #bbb;
      text-shadow: 0 1px 1px rgba(#000, .5);
      color: #fff;
      text-align: center;
      font-weight: bold;
      border-radius: 99%;
      line-height: 1rem;
    }
  }

  &#wrap-participantcode {
    margin-top: 1.5rem;
  }
}

.dropdown {
  font-size: 1rem;
  font-family: $f-main;
  border-radius: 3px;
}

.code {
  font-size: 1rem;
  font-family: monospace;
}

.section-title {
  display: block;
  margin-top: 6rem;
  border-bottom: 1px solid #ccc;
  padding-bottom: .5rem;
}

.footer {
  background: #fafafa;
  border-top: 1px solid #ddd;
  padding: 2rem 0;
  color: #666;
  font-size: .8rem;
  text-align: center;

  &__nav {
    list-style-type: none;
    margin: 0;
    padding: 0;

    li {
      display: inline;
      margin: 0 .5rem;
    }
  }
}

.header {
  background-color: $c-highlight;
  color: #fff;
  padding: .5rem 0;
  height: 4rem;
  position: relative;
  box-shadow: 0 2px 80px 0 rgba(#f00, .2);

  .container {
    height: 100%;
  }
  h1 {
    font-size: 1.5rem;
    padding-left: 4rem;

    a {
      text-decoration: none;
    }
    @include mobile {
      font-size: 1rem;
      padding-left: 3rem;
    }
  }
  .logo {
    position: absolute;
    top: 50%;
    left: 1rem;
    width: auto;
    height: 3rem;
    transform: translateY(-50%);
    z-index: 1;

    @include mobile {
      height: 2.5rem;
    }
  }
  @include mobile {
    box-shadow: 0 2px 50px 0 rgba(#f00, .2);
  }
}

section.subpage {
  padding: 2rem 0 4rem 0;

  @include mobile {
    padding: 1rem 0;
  }
}

.home-section {
  padding: 2rem 1rem 2rem 1rem;
  border-bottom: 1px solid #ddd;

  h2 {
    font-size: .75rem;
    margin: 0 auto;
    margin-bottom: .5rem;
    text-align: center;
    font-weight: normal;
  }
}
.partners-wrap, .social-wrap {
  max-width: 940px;
  padding: 0 1rem;
  box-sizing: border-box;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.partner {
  width: 11rem;
  margin: 0 1rem;

  img {
    display: block;
    width: 100%;
    height: auto;
  }

  @include mobile {
    width: 100%;
    max-width: 10rem;
  }
}

.social-wrap {
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;

    li {
      display: inline;
    }
  }
}
.social-btn {
  display: inline-block;
  font-size: .8rem;
  padding: .5rem 1rem;
  border: 2px solid #aaa;
  border-radius: 4px;
  background-image: url('../images/social-fb.svg');
  background-size: auto 100%;
  background-position: 0 0;
  background-repeat: no-repeat;
  padding-left: 2.5rem;
  text-decoration: none;
  margin: .5rem .5rem;

  &--fb {
    border-color: #3A559F;
  }
  &--twitter {
    background-image: url('../images/social-twitter.svg');
    border-color: #03A9F4;
  }
  &--whatsapp {
    background-image: url('../images/social-whatsapp.svg');
    border-color: #2CB742;
  }
  &--mail {
    background-image: url('../images/social-mail.svg');
  }
  &:hover {
    background-color: #fafafa;
  }
}

.faq__question {
  font-size: 1rem;
  line-height: 1.4;
  margin-top: 2rem;
  border-bottom: 2px solid #ddd;
  padding-bottom: 4px;
}
/* ... */

